--- a/plugins/Admintheme/webroot/css/style.css
+++ b/plugins/Admintheme/webroot/css/style.css
@@ -8051,3 +8051,13 @@ td, th {padding:5px;}
 .help-inline{
     color: red;
 }
+
+.news-img{
+    width: 200px;
+    height: 200px;
+}
+.news-img img{
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+}
