--- a/plugins/Admintheme/webroot/css/style.css
+++ b/plugins/Admintheme/webroot/css/style.css
@@ -2814,7 +2814,7 @@ section.content {
 
 /* Card ======================================== */
 .card {
-  background: #fff;
+  background: #fff;/*#9b8761*/
   min-height: 50px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
   position: relative;
@@ -7709,7 +7709,7 @@ fieldset[disabled] .form-control {
 
 /* Login Page ================================== */
 .login-page {
-  background-color: #00BCD4;
+  background-color: #473c26;/*#00BCD4*/
   padding-left: 0;
   max-width: 360px;
   margin: 10% auto 10% 10%;
@@ -8060,4 +8060,8 @@ td, th {padding:5px;}
     width: 100%;
     height: 200px;
     object-fit: cover;
+}
+
+.login-back {
+    background: #9b8761;/*#fff*/
 }
