--- a/plugins/Admintheme/webroot/css/style.css
+++ b/plugins/Admintheme/webroot/css/style.css
@@ -2345,6 +2345,11 @@
   .panel-switch-btn {
     top: 12px;
     right: 0 !important; } }
+/*
+    @media only screen and (max-width: 467px) {
+  .select2-container--default .select2-selection--multiple{width:267px;}
+.select2-container .select2-selection--single{ width: 262px;}
+}*/
 
 @media (min-width: 768px) and (max-width: 991px) {
   .navbar > .container .navbar-brand,
@@ -2355,6 +2360,11 @@
   .navbar > .container .navbar-brand,
   .navbar > .container-fluid .navbar-brand {
     margin-left: 20px; } }
+
+/*.select2-container{width:100%}*/
+.select2 {
+    width: 100%!important;
+}
 
 /* General ===================================== */
 body {
