--- a/plugins/Admintheme/webroot/css/style.css
+++ b/plugins/Admintheme/webroot/css/style.css
@@ -2320,7 +2320,7 @@
   .navbar > .container .navbar-brand,
   .navbar > .container-fluid .navbar-brand {
     margin-left: 35px;
-    width: 73%; }
+    width: 50%; }
   .navbar .navbar-header {
     display: inline-block;
     margin-bottom: -6px;
@@ -2333,7 +2333,9 @@
     margin-left: -7px; }
     .navbar .navbar-nav .open .dropdown-menu {
       background-color: #fff;
-      position: absolute; }
+      position: absolute; 
+     height: 110px;
+    left: 57px;}
   .navbar .dropdown-menu {
     margin-left: -50px; }
   .navbar .js-right-sidebar {
@@ -7512,12 +7514,13 @@ fieldset[disabled] .form-control {
       margin-top: 5px;
       font-size: 13px; }
   .sidebar .user-info {
-    padding: 13px 15px 12px 15px;
+    padding: 0px 15px 0px 15px;
     white-space: nowrap;
     position: relative;
     border-bottom: 1px solid #e9e9e9;
-    background: url("../img/user-img-background.jpg") no-repeat no-repeat;
-    height: 135px; }
+    /*background: url("../img/user-img-background.jpg") no-repeat no-repeat;*/
+    background-color: #239cab!important;
+    height: 84px; }
     .sidebar .user-info .image {
       margin-right: 12px;
       display: inline-block; }
@@ -7538,7 +7541,8 @@ fieldset[disabled] .form-control {
         -o-text-overflow: ellipsis;
         text-overflow: ellipsis;
         overflow: hidden;
-        font-size: 14px;
+        text-transform: uppercase;
+        font-size: 18px;
         max-width: 200px;
         color: #fff; }
       .sidebar .user-info .info-container .email {
@@ -8075,3 +8079,16 @@ td, th {padding:5px;}
 .login-back {
     background: #9b8761;/*#fff*/
 }
+
+.navbar.change-color {
+    background-color: #239cab!important;
+}
+
+.logout-icon{
+    margin-top: 14px;
+    display:  table;
+    color: #fff;
+    vertical-align: text-bottom;
+}
+.logout-icon i{
+vertical-align: middle;}
