--- a/plugins/Admintheme/webroot/css/style.css
+++ b/plugins/Admintheme/webroot/css/style.css
@@ -8091,4 +8091,6 @@ td, th {padding:5px;}
     vertical-align: text-bottom;
 }
 .logout-icon i{
-vertical-align: middle;}
+vertical-align: middle;} 
+
+/*for home page*/
