--- a/plugins/Admintheme/webroot/css/style.css
+++ b/plugins/Admintheme/webroot/css/style.css
@@ -8094,3 +8094,4 @@ td, th {padding:5px;}
 vertical-align: middle;} 
 
 /*for home page*/
+.table-responsive.list-page{overflow-x: visible!important;}
